# MarketMind

./: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-train.txt  requirements.txt
scripts/: build_dataset.py  retrain_from_trades.py  run_backtest.py  run_paper_trader.py  run_pipeline.py  run_servers.sh  seed_db.py  test_agents.py  test_quant.py  test_report.py  train_llm.py  train_ml.py
src/marketmind/: __init__.py  config.py  news_sentiment.py  paper_trader.py  portfolio_db.py  quant_signal.py  scanner.py  script_tuner.py  state.py
src/marketmind.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/marketmind/agents/: factory.py  nodes.py  prompts.py
src/marketmind/app/: streamlit_app.py
src/marketmind/backtest/: __init__.py  dataset.py  engine.py  features.py  llm_finetune.py  ml_model.py
src/marketmind/graph/: orchestrator.py
src/marketmind/servers/: market_data_server.py  news_server.py  portfolio_server.py
