[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marketmind"
version = "0.1.0"
description = "Multi-agent financial research MVP — three MCP servers + LangGraph orchestrator."
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "mcp",
    "langgraph",
    "langchain",
    "langchain-anthropic",
    "langchain-mcp-adapters",
    "langsmith",
    "yfinance",
    "TA-Lib",
    "vaderSentiment",
    "pandas",
    "numpy",
    "python-dotenv",
    "streamlit",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]
